# Aegis-Portable-Demo

./: .dockerignore  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODO_VERIFICATION.md  file_info.txt  install.sh  ldd_info.txt  stress_test.sh  verify.sh
.github/workflows/: ci.yml  release.yml
aegis-cli/: Cargo.toml  build.rs
aegis-cli/fuzz/: Cargo.toml
aegis-cli/fuzz/fuzz_targets/: config_parse.rs
aegis-cli/src/: compat.rs  config.rs  geo.rs  main.rs
aegis-cli/src/feeds/: downloader.rs  parser.rs
aegis-cli/src/tui/: mod.rs
aegis-common/: Cargo.toml
aegis-common/src/: lib.rs
aegis-ebpf/: Cargo.toml
aegis-ebpf/src/: headers.rs  main.rs  parsing.rs
aegis-tc/: Cargo.toml
aegis-tc/src/: headers.rs  main.rs  parsing.rs
deploy/: aegis@.service
guide/: 01_offline_geoip.md  02_config_file.md  03_allowlist.md  04_build_info.md  05_shell_completions.md  06_uninstall.md  07_json_logging.md  08_status_command.md  09_logrotate.md  10_prometheus_metrics.md  README.md
verification/: Cargo.toml
verification/fuzz/: Cargo.toml
verification/fuzz/fuzz_targets/: fuzz_lpm_lookup.rs  fuzz_packet_parsing.rs  fuzz_rate_limit.rs
verification/src/: lib.rs
verification/tla/: ConnTrack.cfg  ConnTrack.tla
xtask/src/: main.rs
