[package]
name = "aegis-common"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Shared types for Aegis eBPF firewall"

[features]
user = ["dep:serde", "dep:aya"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }
