[package]
name = "aegis-verification"
version = "0.1.0"
edition = "2021"
description = "Formal verification and testing for Aegis eBPF firewall"

[dependencies]
aegis-common = { path = "../aegis-common", features = ["user"] }

[dev-dependencies]
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

# Kani proofs (conditional)
[target.'cfg(kani)'.dependencies]
# Kani doesn't need explicit dependency - it's a verification tool

[features]
default = []
kani = []  # Enable Kani proofs
