[package]
name = "aegis-cli-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.aegis-cli]
path = ".."

[dependencies.toml]
version = "0.8"

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
